# solid-robot

./: .env.example  .gitignore  BUILD-PLAN.md  CHECKLIST.md  CLAUDE-CODE-INSTRUCTIONS.md  CLAUDE.md  DECISIONS.md  ERROR-HANDLING.md  MERGELOG.md  README.md  SESSION_STATUS.md  SPEC.md  TODO.md
backend/: .env.example  .pre-commit-config.yaml  Dockerfile.worker  docker-compose.distributed.yml  pyproject.toml
backend/ResearchTool/Services/: APIClient.swift
backend/data/domain_configs/: academic.json  competitive_intelligence.json  medical.json  regulatory.json
backend/data/reports/: complete_eu_drone_regulations.md  full_European_drone_flight_authorization_applications_E.json
backend/docs/: distributed-crawling.md
backend/scripts/: full_research_export.py  start-distributed.sh
backend/src/research_tool/: __init__.py  main.py
backend/templates/: report.html.j2  report.md.j2
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: test_research_flow.py  test_research_workflow.py
backend/tests/integration/: test_agent_workflow.py  test_auto_configuration.py  test_distributed_crawling.py  test_learning_influences_research.py  test_learning_persistence.py  test_websocket.py
backend/tests/performance/: __init__.py  test_response_times.py
backend/tests/unit/: test_analyze.py  test_anti_patterns.py  test_arxiv.py  test_binary_exports.py  test_brave.py  test_circuit_breaker.py  test_clarify.py  test_collect.py  test_confidence.py  test_confidence_correlation.py  test_config_loader.py  test_crawler.py  test_decisions.py  test_distributed_api.py  test_distributed_celery.py  test_distributed_coordinator.py  test_distributed_tasks.py  test_domain_detection_accuracy.py  test_domain_detector.py  test_edge_cases.py  test_evaluate.py  test_exa.py  test_export.py  (+26 more)
(+144 files in other folders)
