[project]
name = "research-tool"
version = "0.1.0"
description = "Professional research assistant tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24.0",
    "litellm>=1.0.0",
    "langgraph>=0.0.30",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langchain-core>=0.1.0",
    "lancedb>=0.3.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
    "playwright>=1.40.0",
    "trafilatura>=1.6.0",
    "tavily-python>=0.3.0",
    "exa-py>=1.0.0",
    "arxiv>=2.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "pre-commit>=3.4.0",
]
distributed = [
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_tool"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["N818"]  # Allow exception names without Error suffix

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "benchmark: marks tests as performance benchmarks",
]
